# cutover-migration-toolkit

./: .env.example  .gitignore  README.md  check_db.py  pyproject.toml
.github/workflows/: ci.yml
scripts/: run_migration.py  run_reconciliation.py  setup_db.py
sql/: cloud_schema.sql  legacy_schema.sql
src/cutover/: config.py  db.py  seed.py
src/cutover/cloud/: api.py
src/cutover/etl/: extract.py  load.py  pipeline.py  transform.py
src/cutover/reconcile/: api_validator.py  queries.py  report.py  transform_helpers.py
static/: dashboard.html
tests/: conftest.py
tests/e2e/: test_dashboard.py
tests/integration/: test_explorer.py  test_pipeline.py  test_reconcile.py
tests/unit/: test_checks.py  test_transform.py
