[project]
name = "cutover"
version = "1.0.0"
description = "Municipal ERP data migration & reconciliation toolkit"
requires-python = ">=3.11"
dependencies = [
    "psycopg2-binary>=2.9",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "tabulate>=0.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "playwright>=1.40"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
markers = [
    "e2e: end-to-end browser tests (require a Playwright browser)",
]